# fastapi-base

./: README.md  docker-compose.yml  pyproject.toml
app/: .env.template  main.py
app/alembic/: env.py
app/core/: config.py  db_helper.py
app/core/models/: base.py
app/core/models/mixins/: __init__.py
app/db/models/: base.py
